--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   nestapp:
-    build: .
+    image: alejandro2314/e_comerce_m4:latest
     ports:
       - "3001:3000"
     env_file:
